<package>
  <name>roscpp</name>
  <version>1.12.7</version>
  <description>
    roscpp is a C++ implementation of ROS. It provides
    a <a href="http://www.ros.org/wiki/Client%20Libraries">client
    library</a> that enables C++ programmers to quickly interface with
    ROS <a href="http://ros.org/wiki/Topics">Topics</a>,
    <a href="http://ros.org/wiki/Services">Services</a>,
    and <a href="http://ros.org/wiki/Parameter Server">Parameters</a>.

    roscpp is the most widely used ROS client library and is designed to
    be the high-performance library for ROS.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/roscpp</url>
  <author>Morgan Quigley</author>
  <author>Josh Faust</author>
  <author>Brian Gerkey</author>
  <author>Troy Straszheim</author>

  <buildtool_depend version_gte="0.5.78">catkin</buildtool_depend>

  <build_depend version_gte="0.3.17">cpp_common</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend version_gte="0.3.17">roscpp_traits</build_depend>
  <build_depend version_gte="1.10.3">rosgraph_msgs</build_depend>
  <build_depend>roslang</build_depend>
  <build_depend version_gte="0.6.4">rostime</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>xmlrpcpp</build_depend>

  <run_depend version_gte="0.3.17">cpp_common</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend version_gte="0.3.17">roscpp_traits</run_depend>
  <run_depend version_gte="1.10.3">rosgraph_msgs</run_depend>
  <run_depend version_gte="0.6.4">rostime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>xmlrpcpp</run_depend>
</package>
