<package>
  <name>rospy</name>
  <version>1.11.21</version>
  <description>
    rospy is a pure Python client library for ROS. The rospy client
    API enables Python programmers to quickly interface with ROS <a
    href="http://ros.org/wiki/Topics">Topics</a>, <a
    href="http://ros.org/wiki/Services">Services</a>, and <a
    href="http://ros.org/wiki/Parameter Server">Parameters</a>. The
    design of rospy favors implementation speed (i.e. developer
    time) over runtime performance so that algorithms can be quickly
    prototyped and tested within ROS. It is also ideal for
    non-critical-path code, such as configuration and initialization
    code. Many of the ROS tools are written in rospy to take
    advantage of the type introspection capabilities.

    Many of the ROS tools, such
    as <a href="http://ros.org/wiki/rostopic">rostopic</a>
    and <a href="http://ros.org/wiki/rosservice">rosservice</a>, are
    built on top of rospy.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rospy</url>
  <author>Ken Conley</author>

  <buildtool_depend version_gte="0.5.78">catkin</buildtool_depend>

  <run_depend>genpy</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>python-yaml</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend version_gte="1.10.3">rosgraph_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
    <architecture_independent/>
  </export>
</package>
