<package>
  <name>rosgraph_msgs</name>
  <version>1.9.43</version>
  <description>
     Messages relating to the ROS Computation Graph. These are generally considered to be low-level messages that end users do not interact with.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rosgraph_msgs</url>
  <author>Ken Conley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
