<?xml version="1.0"?>
<package format="2">
  <name>test_perf_benchmark</name>
  <version>1.0.0</version>
  <description>
    This package is used to compare latency between
    TCPROS/UDPROS and UDSROS in each throughput size.
  </description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
