<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_rosbag</name>
  <version>1.15.8</version>
  <description>
    A package containing the unit tests for rosbag.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rosbag</url>
  <url type="bugtracker">https://github.com/ros/ros_comm/issues</url>
  <url type="repository">https://github.com/ros/ros_comm</url>
  <author>Tim Field</author>
  <author>Jeremy Leibs</author>
  <author>James Bowman</author>

  <depend>rosbag</depend>
  <depend>rostest</depend>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>bzip2</build_depend>
  <build_depend>cpp_common</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-imaging</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-pil</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>rosunit</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>xmlrpcpp</build_depend>

  <test_depend>genmsg</test_depend>
  <test_depend>genpy</test_depend>
  <test_depend>libboost-dev</test_depend>
  <test_depend>message_runtime</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</test_depend>
  <test_depend>roslib</test_depend>
  <test_depend>rospy</test_depend>
  <test_depend>rostopic</test_depend>

  <export>
    <rosdoc config="${prefix}/rosdoc.yaml"/>
  </export>
</package>
