<package>
  <name>test_rosbag_storage</name>
  <version>1.12.4</version>
  <description>
    A package containing the unit tests for rosbag_storage.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosbag_storage</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rosbag_storage</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
