<package>
  <name>test_rosbag_storage</name>
  <version>1.14.13</version>
  <description>
    A package containing the unit tests for rosbag_storage.
  </description>
  <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <maintainer email="sloretz@openrobotics.org">Shane Loretz</maintainer>
  <license>BSD</license>
  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosbag_storage</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rosbag_storage</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
